--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,33 +1,4 @@
 @charset "UTF-8";
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-  width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-    padding-left: 32px;
-    padding-right: 32px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-}
-
-body {
-  font-family: 'DM Sans', sans-serif;
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -50,7 +21,6 @@ body {
   text-align: center;
   width: 100%;
 }
-
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
@@ -58,7 +28,6 @@ body {
     padding-right: 32px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
@@ -68,15 +37,13 @@ body {
 }
 
 html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 img {
@@ -108,6 +75,10 @@ ul {
   padding-left: 0;
 }
 
+body {
+  font-family: "DM Sans", sans-serif;
+}
+
 .link {
   text-decoration: none;
 }
@@ -120,7 +91,7 @@ ul {
 
 .customer_container {
   color: #212121;
-  background-color: #FAFAFA;
+  background-color: #fafafa;
 }
 
 .customer_img {
@@ -142,174 +113,313 @@ ul {
   line-height: 1.86;
 }
 
-.gallery__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-bottom: 60px;
+.advantage {
+  background-color: #fff5f6;
+  padding-left: 20px;
+}
+@media screen and (min-width: 768px) {
+  .advantage__list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
+.advantage__icon {
+  margin-bottom: 25px;
+}
+@media screen and (min-width: 768px) {
+  .advantage__icon {
+    margin-bottom: 36px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantage__icon {
+    margin-bottom: 40px;
+  }
+}
+.advantage__box {
+  max-width: 230px;
+}
+@media screen and (min-width: 768px) {
+  .advantage__box {
+    max-width: 160px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantage__box {
+    max-width: 300px;
+  }
+}
+.advantage__item {
+  font-family: "Titane One", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 1.13;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+  margin-bottom: 32px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantage__item {
+    font-size: 48px;
+    margin-bottom: 23px;
+  }
+  .advantage__item:not(:last-child) {
+    margin-right: 4px;
+  }
+  .advantage__item:last-child {
+    margin-left: 18px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantage__item {
+    font-size: 58px;
+    margin-bottom: 23px;
+  }
+  .advantage__item:not(:last-child) {
+    margin-right: 80px;
+  }
+  .advantage__item:first-child {
+    margin-right: 115px;
+  }
+}
+.advantage__text {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.66;
+  text-transform: none;
+  letter-spacing: 0;
+  color: #000000;
+  margin-top: 25px;
+}
+@media screen and (min-width: 768px) {
+  .advantage__text {
+    font-size: 14px;
+    line-height: 1.74;
+    margin-top: 20px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .advantage__text {
+    font-size: 16px;
+    margin-top: 16px;
+  }
 }
 
+.gallery__container {
+  display: flex;
+  padding: 0 0 60px;
+}
 @media screen and (min-width: 1200px) {
   .gallery__container {
     padding: 0 93px 120px 94px;
   }
 }
 
+.gallery__column {
+  flex-basis: calc((100% - 15px) / 7);
+}
 .gallery__column:not(:last-child) {
   margin-right: 3px;
 }
-
 @media screen and (min-width: 768px) {
   .gallery__column:not(:last-child) {
     margin-right: 6px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .gallery__column:not(:last-child) {
     margin-right: 8px;
   }
 }
-
 .gallery__column--first {
-  padding-top: 45px;
+  padding-top: 13.75vw;
 }
-
 @media screen and (min-width: 768px) {
   .gallery__column--first {
     padding-top: 109px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .gallery__column--first {
     padding-top: 143px;
   }
 }
-
 .gallery__column--second {
-  padding-top: 28px;
+  padding-top: 8.75vw;
 }
-
 @media screen and (min-width: 768px) {
   .gallery__column--second {
     padding-top: 67px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .gallery__column--second {
     padding-top: 89px;
   }
 }
-
-.gallery__column--fourth {
-  padding-top: 31px;
+.gallery__column--third {
+  flex-basis: calc((100% - 15px) / 7 * 2);
 }
-
+.gallery__column--fourth {
+  padding-top: 9.7vw;
+}
 @media screen and (min-width: 768px) {
   .gallery__column--fourth {
     padding-top: 75px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .gallery__column--fourth {
     padding-top: 99px;
   }
 }
-
 .gallery__column--fifth {
-  padding-top: 21px;
+  padding-top: 6.6vw;
 }
-
 @media screen and (min-width: 768px) {
   .gallery__column--fifth {
     padding-top: 50px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .gallery__column--fifth {
     padding-top: 66px;
   }
 }
-
 .gallery__column--sixth {
-  padding-top: 49px;
+  padding-top: 15.3vw;
 }
-
 @media screen and (min-width: 768px) {
   .gallery__column--sixth {
     padding-top: 117px;
   }
 }
-
 @media screen and (min-width: 1200px) {
   .gallery__column--sixth {
     padding-top: 155px;
   }
 }
 
-.gallery__img-top {
-  margin-bottom: 3px;
+.gallery__img {
+  width: 100%;
 }
-
+.gallery__img--top {
+  margin-bottom: 1vw;
+}
 @media screen and (min-width: 768px) {
-  .gallery__img-top {
+  .gallery__img--top {
     margin-bottom: 6px;
   }
 }
-
 @media screen and (min-width: 1200px) {
-  .gallery__img-top {
+  .gallery__img--top {
     margin-bottom: 8px;
   }
 }
+.gallery__img--bottom {
+  width: 48.76%;
+}
 
-.footer__upertitle {
-  font-family: 'Titan One';
+.footer {
+  background-color: #fff5f6;
+  border: 1px solid #000000;
+  border-top: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.footer-title {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  border-bottom: 40px;
+  width: 234px;
+}
+
+.footer__upper-title {
+  margin-bottom: 16px;
+  text-align: left;
+  font-family: "Titane One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 21px;
+  line-height: 1.17;
   text-transform: uppercase;
   color: #ffa5ba;
 }
 
 .footer__main-title {
-  font-family: 'Titan One';
+  text-align: left;
+  font-family: "Titane One", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 34px;
-  line-height: 39px;
+  line-height: 1.15;
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #d41443;
 }
 
+.footer__icons-list {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  margin-bottom: 40px;
+}
+
+.footer__icons-item {
+  margin-right: 28px;
+}
+.footer__icons-item:last-child {
+  margin-right: 0;
+}
+
+.footer__icons-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #fea5bb;
+}
+.footer__icons-link:hover, .footer__icons-link:focus {
+  background-color: #d41443;
+}
+
+.footer__icons-picture {
+  fill: #ffffff;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer__contacts-phone {
-  font-family: 'DM Sans';
+  font-family: "DM Sans", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 12px;
-  line-height: 186%;
-  /* or 22px */
+  line-height: 2.2;
   text-align: right;
   color: #000000;
 }
-
 .footer__contacts-phone--accent {
   color: #d41443;
 }
 
+.footer-sign {
+  margin-top: 16px;
+  margin-bottom: 3px;
+}
+
 .footer__sign-text {
-  font-family: 'DM Sans';
+  font-family: "DM Sans", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
-  line-height: 152%;
-  /* or 21px */
+  line-height: 1.52;
   text-align: center;
   color: #907e82;
 }
@@ -319,7 +429,6 @@ ul {
   padding-bottom: 40px;
   /* Класс скрывает семантический заголовок*/
 }
-
 .contacts-section__title.never {
   position: absolute;
   width: 1px;
@@ -333,7 +442,6 @@ ul {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
 .contacts-section__text {
   display: inline-block;
   line-height: 1.83;
@@ -345,11 +453,9 @@ ul {
   border-radius: 4px;
   margin-bottom: 20px;
 }
-
 .contacts-section__text.food {
   background-color: #c2e297;
 }
-
 .contacts-section__list {
   border-radius: 24px;
   text-align: left;
@@ -359,51 +465,41 @@ ul {
   padding-left: 32px;
   padding-right: 32px;
 }
-
 .contacts-section__list:not(:last-child) {
   margin-bottom: 20px;
 }
-
 .contacts-section__list__button {
   padding-top: 32px;
 }
-
 .contacts-section__list__location::after {
-  content: '';
+  content: "";
   display: block;
   border-bottom: 1px solid #e1e1e1;
 }
-
 .contacts-section__list__time {
   padding-top: 24px;
   padding-bottom: 24px;
 }
-
 .contacts-section__item__location {
   margin-bottom: 8px;
 }
-
 .contacts-section__item__about {
   line-height: 1.5;
   margin-bottom: 32px;
   padding-right: 37px;
 }
-
 .contacts-section__item__day {
   color: #000000;
   line-height: 1.83;
   margin-bottom: 11px;
 }
-
 .contacts-section__item__time:not(:last-child) {
   margin-bottom: 8px;
 }
-
 .contacts-section__item__time {
   line-height: 1.83;
   color: #ffa5ba;
 }
-
 .contacts-section__item__contacts_tel {
   margin-bottom: 7px;
 }
@@ -433,5 +529,4 @@ ul {
   border-radius: 22px;
   padding-top: 14px;
   padding-bottom: 14px;
-}
-/*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
