--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -4,8 +4,6 @@
   border-top: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-// Footer titles
-// ___________________
 
 .footer-title {
   margin-left: auto;
@@ -39,9 +37,6 @@
   color: $title-text-color;
 }
 
-// Footer icons
-// ___________________
-
 .footer__icons-list {
   display: flex;
   align-items: center;
@@ -57,7 +52,9 @@
 }
 
 .footer__icons-link {
-  @include display-flex(center, center);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 32px;
   height: 32px;
   border-radius: 50%;
@@ -74,9 +71,6 @@
   justify-content: center;
   align-items: center;
 }
-
-// Footer contacts
-// ___________________
 
 .footer__contacts-phone {
   font-family: $primary-font;
