--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,7 +35,7 @@
             width="19.2px"
             height="14.93px"
           >
-            <use href="./images/images/ "></use>
+            <use href=""></use>
           </svg>
         </a>
       </li>
