add section add_mobile

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -3,7 +3,7 @@ body {
 }
 
 $primary-font: 'DM Sans', sans-serif;
-$second-font: 'Titane One', sans-serif;
+$second-font: 'Titan One', sans-serif;
 $primary-text-color: #212121;
 $white-color: #ffffff;
 $black-color: #000000;
