--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -5,9 +5,11 @@
   padding-right: 16px;
   text-align: center;
   width: 100%;
+  min-width: 320px;
+  max-width: 479px;
 
-  @media screen and (min-width: 320px) {
-    width: 320px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
   }
 
   @media screen and (min-width: 768px) {
