--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,31 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link
-      rel="stylesheet"
-      href="../node_modules/modern-normalize/modern-normalize.css"
-    />
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-      rel="stylesheet"
-    />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-<!-- <include src="./partials/flexteam.html"></include>
-    <include src="./partials/footer.html"></include>
-  </body>
-</html> -->
--->
-
-<!-- Подвал сайта Footer -->
 <footer class="footer">
   <div class="footer__holder">
     <div class="footer__title">
@@ -41,7 +13,11 @@
           rel="noopener noreferrer"
           aria-label="Github icon"
         >
-          <svg class="footer__icons-picture socials__picture">
+          <svg
+            class="footer__icons-picture socials__picture"
+            width="18.82px"
+            height="18.82px"
+          >
             <use href="./images/icons/symbol-defs.svg#icon-github"></use>
           </svg>
         </a>
@@ -52,9 +28,13 @@
           href=""
           target="_blank"
           rel="noopener noreferrer"
-          aria-label="Twitter icon"
+          aria-label="Telegram icon"
         >
-          <svg class="footer__icons-picture socials__picture">
+          <svg
+            class="footer__icons-picture socials__picture"
+            width="19.2px"
+            height="14.93px"
+          >
             <use href="./images/icons/symbol-defs.svg#icon-telegram"></use>
           </svg>
         </a>
@@ -67,24 +47,27 @@
           rel="noopener noreferrer"
           aria-label="Facebook icon"
         >
-          <svg class="footer__icons-picture socials__picture">
+          <svg
+            class="footer__icons-picture socials__picture"
+            width="8.8px"
+            height="19.2px"
+          >
             <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
     </ul>
     <div class="footer__contacts">
-      <!-- <p class="footer__phone-text"></p> -->
-      <a
-        class="footer__contacts-phone footer__contacts-phone--accent link"
-        href="tel:+610383766284"
-        >Feel free to contact +61 (0) 383 766 284</a
+      <a class="footer__contacts-phone link" href="tel:+610383766284"
+        >Feel free to contact
+        <span class="footer__contacts-phone--accent"
+          >+61 (0) 383 766 284</span
+        ></a
       >
     </div>
     <div class="footer__sign">
-      <p class="footer__sign-text">
-        &#169; 2022 - IceCream. All Rights Reserved.
-      </p>
+      <p class="footer__sign-text">&#169; 2022 - IceCream.</p>
+      <p class="footer__sign-text">All Rights Reserved.</p>
     </div>
   </div>
 </footer>
