add hero styles

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="div">
             <h1>hello world</h1>
-                <button type="button">Submit</button>
+                <button type="button" class="hero__btn">Submit</button>
             </div>
         </div>
     </div>
