Added footer Scss

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,8 @@
-<footer class="footer">
-  <div class="footer__holder">
+<section class="footer">
+  <div class="footer__holder container">
+
     <div class="footer__title">
-      <p class="footer__upertitle">homemade ice cream made</p>
+      <p class="footer__upper-title">homemade ice cream made</p>
       <h2 class="footer__main-title">with passion</h2>
     </div>
     <ul class="footer__icons-list socials">
@@ -14,11 +15,9 @@
           aria-label="Github icon"
         >
           <svg
-            class="footer__icons-picture socials__picture"
-            width="18.82px"
-            height="18.82px"
+            class="footer__icons-picture socials__picture"           
           >
-            <use href="./images/icons/symbol-defs.svg#icon-github"></use>
+            <use href="./images/icons/symbol-defs.svg#icon-github" ></use>
           </svg>
         </a>
       </li>
@@ -31,9 +30,7 @@
           aria-label="Telegram icon"
         >
           <svg
-            class="footer__icons-picture socials__picture"
-            width="19.2px"
-            height="14.93px"
+            class="footer__icons-picture socials__picture"          
           >
             <use href="./images/icons/symbol-defs.svg#icon-telegram"></use>
           </svg>
@@ -49,14 +46,13 @@
         >
           <svg
             class="footer__icons-picture socials__picture"
-            width="8.8px"
-            height="19.2px"
           >
             <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
     </ul>
+    
     <div class="footer__contacts">
       <a class="footer__contacts-phone link" href="tel:+610383766284"
         >Feel free to contact
@@ -65,9 +61,10 @@
         ></a
       >
     </div>
+
     <div class="footer__sign">
       <p class="footer__sign-text">&#169; 2022 - IceCream.</p>
       <p class="footer__sign-text">All Rights Reserved.</p>
     </div>
   </div>
-</footer>
+</section>
