--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,21 +1,35 @@
 .footer {
+  padding-top: 40px;
+  padding-bottom: 3px;
   background-color: $primary-background-color;
   border: 1px solid $black-color;
   border-top: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.footer-title {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;
-  border-bottom: 40px;
+.footer__title {
+  text-align: left;
+  justify-content: right; 
+  margin-bottom: 40px;
   width: 234px;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-direction: column;
+   
+    margin-right: 165px;
+  }
+
+  @media screen and (min-width: 1200px) {
+     margin-bottom: 0; 
+     margin-right: 52px;
+    
+   width: auto;
+}
 }
 
 .footer__upper-title {
   margin-bottom: 16px;
-  text-align: left;
   font-family: $second-font;
   font-style: normal;
   font-weight: 400;
@@ -23,10 +37,20 @@
   line-height: 1.17;
   text-transform: uppercase;
   color: $text-decoration-color;
-}
+
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height:1.5;
+    letter-spacing: 0.04em;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+  line-height:1.13;
+
+}}
 
 .footer__main-title {
-  text-align: left;
   font-family: $second-font;
   font-style: normal;
   font-weight: 400;
@@ -35,6 +59,16 @@
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: $title-text-color;
+  
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    letter-spacing: 0.06em;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 58px;
+    line-height: 1.4;
+}
 }
 
 .footer__icons-list {
@@ -42,6 +76,10 @@
   align-items: center;
   justify-content: right;
   margin-bottom: 40px;
+ 
+ @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
 }
 
 .footer__icons-item {
@@ -49,6 +87,7 @@
   &:last-child {
     margin-right: 0;
   }
+
 }
 
 .footer__icons-link {
@@ -62,7 +101,11 @@
 
   &:hover,
   &:focus {
-    background-color: $title-text-color;
+    fill: $title-text-color;
+  }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 47px;
+
   }
 }
 
@@ -71,6 +114,11 @@
   justify-content: center;
   align-items: center;
 }
+.footer__contacts{
+  text-align: right;
+  margin-bottom: 40px;
+
+}
 
 .footer__contacts-phone {
   font-family: $primary-font;
@@ -78,7 +126,6 @@
   font-weight: 700;
   font-size: 12px;
   line-height: 2.2;
-  text-align: right;
   color: $black-color;
 
   &--accent {
@@ -86,16 +133,14 @@
   }
 }
 
-.footer-sign {
-  margin-top: 16px;
-  margin-bottom: 3px;
-  // &::before {
-  //   content: '';
-  //   border-top: 1px solid #e1e1e1;
-  // margin: 0;
-  // padding: 0;
-  //   width: 100%;
-  // }
+.footer__sign {
+  border-top: 1px solid $complementary-color;
+  padding-top: 16px;
+  padding-left: 0;padding-right: 0;
+  @media screen and (min-width: 768px) {
+  display: flex;
+  justify-content: center;
+}
 }
 
 .footer__sign-text {
@@ -106,4 +151,14 @@
   line-height: 1.52;
   text-align: center;
   color: $primary-text-color;
+
+  @media screen and (min-width: 768px) {
+margin-right: 4px;
+&:last-child {
+  margin-right: 0;
+} 
+}
+
+@media screen and (min-width: 1200px) {
+line-height: 1.86;}
 }
