Сделал основной массив

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,6 +1,8 @@
 <section class="contacts-section section">
     <div class="contacts-container container">
         <h2 class="contacts-section__title never">contacts</h2>
+        <ul class="contacts-section__list__container">
+        <li class="contacts-section__item__container">
         <ul class="contacts-section__list">
             <li class="contacts-section__item">
                 <p class="contacts-section__text">CAFE</p>
@@ -20,11 +22,11 @@
             </li>
             <li class="contacts-section__item">
                 <ul class="contacts-section__list__contacts">
-                    <li class="contacts-section__item__contacts_tel">
+                    <li class="contacts-section__item__contacts__tel">
                         <a class="contacts-section__link__contacts link" href="tel:+610383766284">
                             +61(0) 383 766 284</a>
                     </li>
-                    <li class="contacts-section__item__contacts_post">
+                    <li class="contacts-section__item__contacts__post">
                         <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
                             noreply@envato.com
                         </a>
@@ -32,6 +34,8 @@
                 </ul>
             </li>
         </ul>
+        </li>
+        <li class="contacts-section__item__container">
         <ul class="contacts-section__list">
             <li class="contacts-section__item">
                 <p class="contacts-section__text food">FOODTRUCK</p>
@@ -51,11 +55,11 @@
             </li>
             <li class="contacts-section__item">
                 <ul class="contacts-section__list__contacts">
-                    <li class="contacts-section__item__contacts">
+                    <li class="contacts-section__item__contacts__tel">
                         <a class="contacts-section__link__contacts link" href="tel:+610383766284">
                             +61(0) 383 766 284</a>
                     </li>
-                    <li class="contacts-section__item__contacts">
+                    <li class="contacts-section__item__contacts__post">
                         <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
                             noreply@envato.com
                         </a>
@@ -63,6 +67,8 @@
                 </ul>
             </li>
         </ul>
+        </li>
+        <li class="contacts-section__item__container">
         <ul class="contacts-section__list">
             <li class="contacts-section__item">
                 <p class="contacts-section__text">CAFE</p>
@@ -82,17 +88,19 @@
             </li>
             <li class="contacts-section__item">
                 <ul class="contacts-section__list__contacts">
-                    <li class="contacts-section__item__contacts">
+                    <li class="contacts-section__item__contacts__tel">
                         <a class="contacts-section__link__contacts link" href="tel:+610383766284">
                             +61(0) 383 766 284</a>
                     </li>
-                    <li class="contacts-section__item__contacts">
+                    <li class="contacts-section__item__contacts__post">
                         <a class="contacts-section__link__contacts link" href="malito:noreply@envato.com">
                             noreply@envato.com
                         </a>
                     </li>
                 </ul>
             </li>
+        </ul>
+        </li>
         </ul>
         <ul class="contacts-section__list__button">
             <li class="contacts-section__item__button__location">
@@ -101,6 +109,6 @@
             <li class="contacts-section__item__button__franchise">
                 <button class="contacts-section__button__franchise" type="button">Franchise</button>
             </li>
-        </ul>
+        </ul> 
     </div>
 </section>
