--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -22,3 +22,7 @@ $reviews1-icon-color: #d31342;
 $reviews2-icon-color: #d9d9d9;
 $reviews3-icon-color: #c7133e;
 $box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+$primary-focus-color:#FF0000;
+$second-focus-color:#ECEBEB;
+$background-contacts-primary:#FFF5F6;
+$background-contacts-secondary:#E5E5E5;
