--- a/src/partials/customer_reviews.html
+++ b/src/partials/customer_reviews.html
@@ -6,21 +6,85 @@
                 <div class="customer_container">
         <img src="./images/reviews/reviews-1_sm.png" alt="customer" class="customer_img" width="85" height="85"></img>
         <h3 class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</h3>
-        <p class="customer_text">Emily, Los Angeles</p>  
+        <svg class="pagination" width="50" height="4">
+            <use href="./images/icons/symbol-defs.svg#icon-threedots-red"></use>
+        </svg>
+        
+        <p class="customer_text">Emily, Los Angeles</p> 
+        <ul class="customer__list__svg">
+            <li class="customer__item__svg">
+                <svg class="customer__svg__icon" width="13" height="13">
+                    <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+                </svg>
+            </li>
+            <li class="customer__item__svg">
+                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
+                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+            </li>
+            <li class="customer__item__svg">
+                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
+                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+            </li>
+        </ul> 
     </div>
 </li>
-            <li class="customer_item visually-hidden">
+            <li class="customer_item ">
                 <div class="customer_container">
         <img src="./images/reviews/reviews-2_lg.png" alt="customer" class="customer_img" width="85" height="85"></img>
         <h3 class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</h3>
-        <p class="customer_text">Emily, Los Angeles</p>  
+        <svg class="pagination" width="50" height="4">
+            <use href="./images/icons/symbol-defs.svg#icon-threedots-red"></use>
+        </svg>
+        <p class="customer_text">Rose, San Bernardino</p>  
+        <ul class="customer__list__svg">
+
+            <li class="customer__item__svg">
+                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
+                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+            </li>
+             <li class="customer__item__svg">
+                <svg class="customer__svg__icon" width="14" height="14">
+                    <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+                </svg>
+            </li>
+            <li class="customer__item__svg">
+                <svg class="customer__svg__icon icon-threedots-white" width="12" height="12">
+                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+            </li>
+        </ul>
     </div>
 </li>
-            <li class="customer_item visually-hidden">
+            <li class="customer_item ">
                 <div class="customer_container">
         <img src="./images/reviews/reviews-3_lg.png" alt="customer" class="customer_img" width="85" height="85"></img>
         <h3 class="customer_title">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</h3>
-        <p class="customer_text">Emily, Los Angeles</p>  
+        <svg class="pagination" width="50" height="4">
+            <use href="./images/icons/symbol-defs.svg#icon-threedots-red"></use>
+        </svg>
+        <p class="customer_text">Kate, San Francisco</p>  
+        <ul class="customer__list__svg">
+
+            <li class="customer__item__svg icon-threedots-white">
+                <svg class="customer__svg__icon" width="12" height="12">
+                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+            </li>
+         
+            <li class="customer__item__svg icon-threedots-white">
+                <svg class="customer__svg__icon" width="12" height="12">
+                    <use href="./images/icons/symbol-defs.svg#pagination"></use>
+                </svg>
+            </li>
+             <li class="customer__item__svg">
+                <svg class="customer__svg__icon" width="13" height="13">
+                    <use href="./images/icons/symbol-defs.svg#icon-home"></use>
+                </svg>
+            </li>              
+        </ul>
     </div>
 </li>
         </ul>
