--- a/src/sass/components/_customer_reviews.scss
+++ b/src/sass/components/_customer_reviews.scss
@@ -4,6 +4,7 @@
 .customer_img {
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 32px;
 }
 .customer_title {
   font-family: $primary-font;
@@ -15,6 +16,7 @@
   padding-right: 50px;
   padding-top: 20px;
   padding-bottom: 20px;
+  margin-bottom: 16px;
 }
 .customer_title::before {
   content: '"';
@@ -25,9 +27,24 @@ top: 4509px;
 
 background: #E1E1E1;
 }
+.pagination{
+  margin-bottom: 16px;
+}
 .customer_text {
   font-family: $primary-font;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.86;
+  margin-bottom: 16px;
+}
+
+.customer__list__svg{
+  display: flex;
+  justify-content: center;
+}
+.customer__item__svg:not(:last-child){
+  margin-right: 18px;
+}
+.icon-threedots-white{
+  fill: $dots-color;
 }
