--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -12,6 +12,7 @@
       alt="cow with milk"
     />
     <div class="about__text">
+      <!-- <div class="about__only-text"> -->
       <p class="about__text--first">
         Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo
         cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at
@@ -23,16 +24,17 @@
         suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh,
         tincidunt.<br /><br />Aliquam erat volutpat. Aenean accumsan.
       </p>
+      <!-- </div> -->
+      <img
+        class="about__img"
+        srcset="
+          ../src/images/about/about-2_sm.png    1x,
+          ../src/images/about/about-2_sm@2x.png 2x
+        "
+        src="../src/images/about/about-2_sm.png"
+        alt="milk"
+      />
     </div>
-    <img
-      class="about__img"
-      srcset="
-        ../src/images/about/about-2_sm.png    1x,
-        ../src/images/about/about-2_sm@2x.png 2x
-      "
-      src="../src/images/about/about-2_sm.png"
-      alt="milk"
-    />
   </div>
   <button class="about__btn" type="button">
     Read more
