--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,4 +1,5 @@
 .about {
+  width: 100%;
   background-color: $primary-background-color;
 }
 
@@ -23,21 +24,23 @@
 }
 
 .about__image {
+  width: 100%;
   margin-top: 32px;
   width: 280px;
 }
 
 .about__img {
+  width: 100%;
+  max-width: 280px;
   position: absolute;
-  z-index: 1;
-  width: 280px;
-  top: 600px;
-  padding-left: 4px;
+  top: 27%;
+  z-index: -1;
 }
 
 .about__text {
+  width: 100%;
   position: relative;
-  z-index: 5;
+  z-index: 2;
   padding-right: 64px;
   padding-left: 4px;
   text-align: left;
@@ -45,6 +48,9 @@
   font-size: 12px;
   line-height: 1.58;
 }
+
+// .about__only-text {
+// }
 
 .about__text--first {
   margin-top: 40px;
@@ -85,7 +91,5 @@
   left: 133px;
   transform: translate(-50%, -50%);
   align-items: center;
-  //   margin-right: 28px;
-  //   margin-left: auto;
   fill: $title-text-color;
 }
